<resources>
    <string name="ANS_REG_START_DBM">{fields:[ {name:POPublicKeyDF24,size:2312,bitmap:false,format:Hexadecimal} ,{name:POPubkeySignature,size:2048,bitmap:false,format:Hexadecimal} ]}</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_dev">Developer</string>
    <string name="about_version">Version</string>
    <string name="action_back">Back</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Log out</string>
    <string name="action_permission_tryAgain">Try again</string>
    <string name="action_report">Send Report</string>
    <string name="action_settings">Settings</string>
    <string name="action_terms_and_conditions">Terms and Conditions</string>
    <string name="action_update_data">Update data</string>
    <string name="action_update_data_summary">Tap here to update the data of the app</string>
    <string name="add_billing_data">Add billing data</string>
    <string name="anda_channelDescription">Channel where notifications related with Anda will be posted.</string>
    <string name="anda_channelName">Anda Channel</string>
    <string name="anda_notificationChannel">anda_notificationChannel</string>
    <string name="app_anda_name">Anda</string>
    <string name="app_contacts">Contacts</string>
    <string name="app_data_updated">Anda data updated with success</string>
    <string name="app_description1">The app calculates the best\nfares throughout the month</string>
    <string name="app_description2">You only pay at\nthe end of the month</string>
    <string name="app_name">BackendBeacons</string>
    <string name="app_slogan">Use any Andante\ntransportation</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="begins_at">Begins at</string>
    <string name="bill_invoices">Invoices</string>
    <string name="bill_saving">Saving</string>
    <string name="bill_total">Trips total</string>
    <string name="bill_virtual_card">Virtual Card</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bus">Bus</string>
    <string name="card_select_same_payment_method">Payment method already selected. Do you want to remove the current one and associate a new credit/debit card?</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="res_0x7f10004a_com_crashlytics_android_build_id">43a1098a-ad34-42f3-b9b4-486dcee76a6e</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contacts_email_andante">Email Andante</string>
    <string name="contacts_email_andante_email">&lt;a href=mailto:anda@linhandante.com&gt;anda@linhandante.com&lt;/a&gt;</string>
    <string name="contacts_linhaandante">Linhandante</string>
    <string name="contacts_linhandante_phone">&lt;a href=tel:+351808200444&gt;808 200 444&lt;/a&gt;</string>
    <string name="contacts_linhandante_phone2">&lt;a href=tel:+351226158151&gt;226 158 151&lt;/a&gt;</string>
    <string name="contract_datamodel">{fields:[{name:ContractVersionNumber,size:8,bitmap:false,format:Hexadecimal} ,{name:ContractStatus,size:8,bitmap:false,format:Hexadecimal} ,{name:ContractRfu,size:2,bitmap:false,format:Hexadecimal} ,{name:ContractValidityStartDate,size:14,bitmap:false,format:ReverseDate} ,{name:ContractValidityDuration,size:8,bitmap:false,format:Decimal} ,{name:ContractNetworkId,size:8,bitmap:false,format:Hexadecimal} ,{name:ContractProvider,size:8,bitmap:false,format:Hexadecimal} ,{name:ContractCounterCode,size:2,bitmap:false,format:Hexadecimal} ,{name:ContractTariff,size:5,bitmap:false,format:Hexadecimal} ,{name:ContractJourneyInterchanges,size:1,bitmap:false,format:Hexadecimal} ,{name:ContractVehicleClassAllowed,size:2,bitmap:false,format:Hexadecimal} ,{name:ContractRestrictTime,size:5,bitmap:false,format:Hexadecimal} ,{name:ContractRestrictCode,size:8,bitmap:false,format:Hexadecimal} ,{name:ContrcatPeriodJourneys,size:8,bitmap:false,format:Hexadecimal} ,{name:ContractLocation,size:40,bitmap:false,format:Hexadecimal} ,{name:ContractSaleDate,size:16,bitmap:false,format:Hexadecimal} ,{name:ContractSaleSam,size:32,bitmap:false,format:Hexadecimal} ,{name:ContractSaleCounter,size:24,bitmap:false,format:Hexadecimal} ,{name:ContractAuthKvc,size:8,bitmap:false,format:Hexadecimal} ,{name:ContractAuthenticator,size:24,bitmap:false,format:Hexadecimal} ]}</string>
    <string name="current">Current</string>
    <string name="current_in_place">Currently in place</string>
    <string name="current_station">Current Station</string>
    <string name="current_zone">Current Zone</string>
    <string name="currentpassword">current password</string>
    <string name="descriptionSurpassAPDU">Surpass</string>
    <string name="devices_stop_working_hint">We inform the users with Nexus and Pixel phones that, due to incompatibilities with the NFC technology in these phones and the hardware used by the Andante network, these models will no longer be supported starting in December 2019. Please consider using a physical Andante card to avoid any inconveniences.</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="dont_uninstal_hint">Don\'t uninstall the app to avoid this issue.</string>
    <string name="edit_field_no_connection">Turn the internet on to edit profile fields…</string>
    <string name="edit_field_not_editable">This field cannot be edited…</string>
    <string name="email">e-mail</string>
    <string name="enable">Enable</string>
    <string name="enabling_hce">Enabling validation service</string>
    <string name="enabling_hce_hint">The validation service is still being enabled</string>
    <string name="err_msg_account_into_black_list_description">Equipment or user without permission to travel.</string>
    <string name="err_msg_account_mismatch_description">Another user account is already in use on this device.</string>
    <string name="err_msg_account_not_confirmed_description">The user account is not verified.</string>
    <string name="err_msg_account_not_exist_description">Login failed. Invalid username or password.</string>
    <string name="err_msg_ble_not_supported">This device does not support Bluetooth Low Energy (BLE).</string>
    <string name="err_msg_bluetoothdisabled">Bluetooth is not enabled on device.</string>
    <string name="err_msg_bluetoothnotsupported">Device does not support Bluetooth.</string>
    <string name="err_msg_bluetoothscanfailed">Bluetooth scan failed.</string>
    <string name="err_msg_card_not_enrolled_description">Virtual card not initialized.</string>
    <string name="user_action_login">Login</string>
    <string name="user_action_register">Create an account</string>
    <string name="user_email">E-mail</string>
    <string name="user_email_confirm">Confirm e-mail</string>
    <string name="user_name">Name</string>
    <string name="user_password">Password</string>
    <string name="user_password_confirm">Confirm password</string>
    <string name="user_phone">Phone number</string>
    <string name="user_profile">Profile</string>
    <string name="user_question_haveAccount">Have an account?</string>
</resources>