<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:fitsSystemWindows="true" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout android:id="@+id/appbar" android:layout_width="match_parent" android:layout_height="wrap_content" app:elevation="0dp">
        <android.support.p067v7.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:elevation="16dp" app:logo="@null" app:popupTheme="@style/AppTheme.Toolbar.Popup" app:theme="@style/AppTheme.Toolbar" app:title="@string/app_contacts" app:titleTextColor="#ffffffff"/>
    </android.support.design.widget.AppBarLayout>
    <FrameLayout android:id="@+id/list_container" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@+id/lPhone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/contacts_linhaandante" android:layout_marginStart="10dp"/>
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Title" android:id="@+id/phone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/contacts_linhandante_phone" android:layout_marginStart="10dp"/>
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Title" android:id="@+id/phone2" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/contacts_linhandante_phone2" android:layout_marginStart="10dp"/>
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@+id/lEmail" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/contacts_email_andante" android:layout_marginStart="10dp"/>
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Title" android:id="@+id/email" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/contacts_email_andante_email" android:layout_marginStart="10dp"/>
        </LinearLayout>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>
