<?xml version="1.0" encoding="utf-8"?>
<android.support.p065v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:clipChildren="false" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:paddingLeft="16dp" android:paddingRight="16dp" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:id="@+id/parentLayout" android:paddingTop="16dp" android:paddingBottom="72dp" android:focusableInTouchMode="true" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content">
            <android.support.p067v7.widget.CardView android:id="@+id/profile" android:layout_width="match_parent" android:layout_height="wrap_content" app:cardElevation="4dp">
                <LinearLayout android:orientation="vertical" android:padding="8dp" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:padding="4dp" android:paddingLeft="4dp" android:paddingTop="4dp" android:paddingRight="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_profile"/>
                    <android.support.design.widget.TextInputLayout android:id="@+id/tName" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:hint="@string/user_name">
                        <android.support.design.widget.TextInputEditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textCapWords" android:imeOptions="flagNoExtractUi|actionNext"/>
                    </android.support.design.widget.TextInputLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputLayout android:id="@+id/tEmail" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:hint="@string/user_email" android:layout_weight="1" android:transitionName="tEmail">
                            <android.support.design.widget.TextInputEditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textWebEmailAddress" android:imeOptions="flagNoExtractUi|actionNext"/>
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout android:id="@+id/tEmailConfirmation" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:hint="@string/user_email_confirm" android:layout_weight="1" android:transitionName="tEmailConfirmation">
                            <android.support.design.widget.TextInputEditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textWebEmailAddress" android:imeOptions="flagNoExtractUi|actionNext"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputLayout android:id="@+id/tPassword" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:hint="@string/user_password" android:layout_weight="1" android:transitionName="tPassword" app:passwordToggleEnabled="true" app:passwordToggleTint="#8a000000">
                            <android.support.design.widget.TextInputEditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword" android:imeOptions="flagNoExtractUi|actionNext"/>
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout android:id="@+id/tPasswordConfirmation" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:hint="@string/user_password_confirm" android:layout_weight="1" android:transitionName="tPasswordConfirmation" app:passwordToggleEnabled="true" app:passwordToggleTint="#8a000000">
                            <android.support.design.widget.TextInputEditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword" android:imeOptions="flagNoExtractUi|actionNext"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <com.hbb20.CountryCodePicker android:gravity="center_vertical" android:id="@+id/ccp" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.3" app:ccp_autoDetectLanguage="true" app:ccp_countryPreference="PT" app:ccp_defaultNameCode="PT"/>
                        <android.support.design.widget.TextInputLayout android:id="@+id/tPhone" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:hint="@string/user_phone" android:layout_weight="0.7" android:transitionName="tPhone">
                            <android.support.design.widget.TextInputEditText android:id="@+id/tPhoneEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="phone" android:imeOptions="actionDone"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
                        <CheckBox android:id="@+id/cTermsAndConditions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:transitionName="cTermsAndConditions"/>
                        <TextView android:textSize="16sp" android:id="@+id/tTermsAndConditions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="I have read and agree to the TERMS AND CONDITIONS" android:layout_marginStart="10dp"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.p067v7.widget.CardView>
            <Button android:layout_gravity="end" android:id="@+id/nextStep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/add_billing_data" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        </LinearLayout>
    </ScrollView>
</android.support.p065v4.widget.NestedScrollView>
