<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:clipChildren="false" android:layout_width="match_parent" android:layout_height="match_parent">
    <pt.opt.anda.gui.view.PannableImageView android:layout_gravity="bottom" android:id="@+id/background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="80dp" android:src="@drawable/design_aliados_side" android:scaleType="matrix"/>
    <pt.opt.anda.gui.view.PannableImageView android:layout_gravity="bottom" android:id="@+id/background2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="80dp" android:src="@drawable/design_saobento_side" android:scaleType="matrix" android:alpha="0"/>
    <pt.opt.anda.gui.view.PannableImageView android:layout_gravity="bottom" android:id="@+id/background3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="80dp" android:src="@drawable/design_dluisbridge_side" android:scaleType="matrix" android:alpha="0"/>
    <ImageView android:layout_gravity="bottom" android:id="@+id/bus" android:layout_width="wrap_content" android:layout_height="32dp" android:layout_marginBottom="80dp" app:srcCompat="@drawable/design_bus_side"/>
    <ImageView android:layout_gravity="bottom" android:id="@+id/train" android:layout_width="wrap_content" android:layout_height="32dp" android:layout_marginBottom="80dp" android:alpha="0" app:srcCompat="@drawable/design_train_side"/>
    <ImageView android:layout_gravity="bottom" android:id="@+id/metro" android:layout_width="wrap_content" android:layout_height="32dp" android:layout_marginBottom="80dp" android:alpha="0" app:srcCompat="@drawable/design_metro_side"/>
    <android.support.constraint.ConstraintLayout android:clipChildren="false" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:id="@+id/logo" android:layout_width="wrap_content" android:layout_height="40dp" android:layout_marginTop="80dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/logo_anda"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:textColor="#516077" android:gravity="center_horizontal" android:id="@+id/slogan" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="32dp" android:layout_marginRight="8dp" android:text="@string/app_slogan" android:textAlignment="center" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:letterSpacing="0.015" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/logo"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:textColor="#516077" android:gravity="center_horizontal" android:id="@+id/description" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="32dp" android:layout_marginRight="8dp" android:text="@string/app_description1" android:alpha="0" android:textAlignment="center" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:letterSpacing="0.015" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/logo"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:textColor="#516077" android:gravity="center_horizontal" android:id="@+id/description2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="32dp" android:layout_marginRight="8dp" android:text="@string/app_description2" android:alpha="0" android:textAlignment="center" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:letterSpacing="0.015" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/logo"/>
        <Button android:id="@+id/register" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp" android:text="@string/user_action_register" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toTopOf="@+id/login" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" style="@style/Widget.AppCompat.Button.Colored"/>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/login" android:clipChildren="false" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0">
            <TextView android:paddingBottom="1.5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_question_haveAccount"/>
            <Button android:id="@+id/bLogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="-12dp" android:layout_marginRight="-24dp" android:text="@string/user_action_login" android:layout_marginStart="-12dp" android:layout_marginEnd="-24dp" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
